tests/checker/diagnostics/0296_fun_explicit_poly_returns_int_06.ml
let bad_zeta : 'a. 'a -> 'a = fun _ -> 5
